# chip8

./: .gitignore  CMakeLists.txt  README.md  build.bat  c8.bat  run.bat
roms/: font_test.ch8  input_test.ch8  random_test.ch8  sound_delay_test.ch8  subroutine_test.ch8  test.ch8
scripts/: README.md  c8a.bat  clean.bat  configure.bat  release.py
src/: assembler.c  chip8.c  chip8.h  emulator.c  graphics.h  instructions.c  instructions.h  main.c  types.h
src/common/: chip8.c  chip8.h  graphics.c  instructions.c  instructions.h  platform.c  platform.h  timer.c  timer.h  types.h
